@@ -4,6 +4,10 @@ nma.krahn <- function(x, tau.preset = 0, sep.trts = x$sep.trts) {
   meta:::chkclass(x, "netmeta")
   
   
+  if (is.na(tau.preset))
+    tau.preset <- 0
+  
+  
   if (is.null(sep.trts))
     sep.trts <- ":"
   
@@ -20,7 +24,8 @@ nma.krahn <- function(x, tau.preset = 0, sep.trts = x$sep.trts) {
 
   studies.pre <- data.frame(studlab = x$studlab,
                             treat1 = x$treat1, treat2 = x$treat2,
-                            TE = -x$TE, seTE = sqrt(x$seTE^2 + tau.preset^2),
+                            TE = -x$TE,
+                            seTE = sqrt(x$seTE^2 + tau.preset^2),
                             narms = x$narms[match(x$studlab, x$studies)],
                             stringsAsFactors = FALSE)
   ##
