@@ -5,11 +5,17 @@
   * Treatment separator (argument 'sep.trts') can be special character
     from regular expressions
 
+  * Between-study variance tau-squared is reported as NA instead of 0
+    in networks without heterogeneity / inconsistency
+
  ** User-visible changes **
 
   * pairwise():
     - print correct labels in error message for studies with duplicate
       treatments
+
+  * print.netmeta():
+    - print uniquely abbreviated treatment names
 
  ** Internal changes **
 
